# sprocket-factory

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
backend-python-api/api/: main.py
backend-python-api/test/: test_main.py
src/api/: main.py  models.py  schema.py
src/data/: sanitize_json.sh  seed_factory_data.sql  seed_factory_data_no_lines.json  seed_sprocket_types.sql  seed_sprocket_types_no_lines.json
src/data/alembic/: env.py
src/data/alembic/versions/: 6a0685835bf0_initial_migration.py
src/test/: test_main.py
src/test/schemas/: factory.json
