[tool.poetry]
name = "sprocket-factory"
version = "0.1.0"
description = "RESTful API backed by Python"
authors = ["Josh Lintag <jlintag@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
jsonschema = "^4.6.0"
FastAPI-SQLAlchemy = "^0.2.1"
pydantic = "^1.9.1"
alembic = "^1.8.0"
python-dotenv = "^0.20.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
requests = "^2.28.0"
black = "^22.3.0"
pytest-env = "^0.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
